--- a/scilab_doc/neldermead/macros.tex
+++ b/scilab_doc/neldermead/macros.tex
@@ -8,6 +8,10 @@
 %% Comment for DVI
 \usepackage[pdftex]{graphicx}
 
+%% Index
+\usepackage{makeidx}
+\makeindex
+
 %% Figures formats: jpeg or pdf
 %% Comment for DVI
 \DeclareGraphicsExtensions{.jpg,.pdf}
@@ -47,6 +51,8 @@
 \newcommand{\bv}{\mathbf{v}}
 \newcommand{\bx}{\mathbf{x}}
 \newcommand{\bl}{\mathbf{l}}
+\newcommand{\br}{\mathbf{r}}
+\newcommand{\bg}{\mathbf{g}}
 
 \usepackage{url}
 
@@ -230,5 +236,9 @@
 % Maths shortcuts 
 \newcommand{\RR}{\mathbb{R}}
 \newcommand{\CC}{\mathbb{C}}
+
+% For symbol degree
+\DeclareTextSymbol{\degre}{T1}{6}
+
 
 
