--- a/scilab_doc/neldermead/neldermead-spendley-so.tex
+++ b/scilab_doc/neldermead/neldermead-spendley-so.tex
@@ -70,6 +70,7 @@ Micha\"el BAUDIN
 
 \renewcommand{\baselinestretch}{1.18}\small \normalsize
 
+\include{chapter-notations}
 \include{method-spendley}
 
 \clearpage
@@ -81,5 +82,7 @@ Micha\"el BAUDIN
 \bibliographystyle{plain}
 \bibliography{neldermead}
 
-\end{document}
+% Index
+\printindex
 
+\end{document}
