--- a/scilab_doc/neldermead/nmbibliography.tex
+++ b/scilab_doc/neldermead/nmbibliography.tex
@@ -36,7 +36,7 @@ deviation of the function value on the simplex.
 
 The convergence of the algorithm is better than Spendley's et al. The 
 method is compared against Powell's free-derivative method (1964) with 
-comparable behaviour. The algorithm is "greedy" in the sense that the 
+comparable behavior. The algorithm is "greedy" in the sense that the 
 expansion point is kept if it improves the best function value in the 
 current simplex. Most Nelder-Mead variants which have been analyzed 
 after are keeping the expansion point only if it improves over the 
@@ -197,7 +197,7 @@ in dimension 1, and various limited convergence results for dimension 2.
 "Convergence of the Nelder--Mead Simplex Method to a Nonstationary Point", 
 SIAM J. on Optimization, K. I. M. McKinnon, 1998
 
-In this article \cite{589109}, Mc Kinnon analyses the behavior of the 
+In this article \cite{589109}, Mc Kinnon analyzes the behavior of the 
 Nelder-Mead simplex method for a family of examples which cause the 
 method to converge to a nonstationnary point. All the examples use 
 continuous functions of two variables. The family of functions contains
@@ -237,7 +237,7 @@ The same ideas are presented in the book \cite{Kelley1999}.
 
 \subsection{Han, 2000}
 
-In his Phd thesis \cite{Han2000}, Lixing Han analyse the 
+In his Phd thesis \cite{Han2000}, Lixing Han analyzes the 
 properties of the Nelder-Mead algorithm.
 Han present two examples in which the Nelder-Mead 
 simplex method does not converge to a single point. 
@@ -260,7 +260,7 @@ of dimensionnality on the Nelder-Mead method.
 Given all the known failures and inefficiencies of the Nelder-Mead 
 method, a very interesting question is why it is so popular in practice.
 Han present numerical results of the Nelder-Mead method on the standard
-collection of MorÃ©-Garbow-Hillstrom with dimensions $n\leq 6$.
+collection of Mor\'e-Garbow-Hillstrom with dimensions $n\leq 6$.
 Han compare the Nelder-Mead method with a finite difference BFGS 
 method and a finite difference steepest descent method. The numerical
 results show that the Nelder-Mead method is much more efficient 
@@ -269,7 +269,7 @@ tested with dimensions $n\leq 6$. It is also often comparable with the
 finite difference BFGS method, which is believed to be the 
 best derivative-free method.
 Some of these results are reproduced in \cite{HanNeumann2006} by Han and Neumann, 
-"Effect of dimensionality on the Nelderâ€“Mead simplex method"
+"Effect of dimensionality on the Nelder-€“Mead simplex method"
 and in \cite{hanNeumann2003}, "On the roots of certain polynomials arising 
 from the analysis of the Nelder-Mead simplex method".
 
@@ -358,7 +358,7 @@ for it belongs to the polyhedron strategies.
 The authors presents a test performed on a pratical application, 
 which leaded them to the following comment :
 "The best result achieved with the ComplInt strategy
-is not only around 10% better than the best result of
+is not only around 10\% better than the best result of
 the Complex strategy due to Box, the ComplInt also
 converges much faster than the Complex does: while
 the Complex strategy needs an average of 7506, the
