--- a/scilab_doc/neldermead/fminsearch-so.tex
+++ b/scilab_doc/neldermead/fminsearch-so.tex
@@ -1,9 +1,3 @@
-%
-% neldermead.tex --
-%   Some notes about Nelder-Mead algorithms.
-%
-% Copyright 2008-2009 Michael Baudin
-%
 \documentclass[12pt]{report}
 
 \include{macros}
@@ -32,7 +26,7 @@
 \begin{center}
 %% Comment for DVI
 \includegraphics[height=40mm]{scilab_logo}
-\vskip4cm
+\vskip2cm
 
 %% Empty space between the box and the text
 \fboxsep6mm
@@ -42,43 +36,42 @@
 $$\fbox{$
   \begin{array}{c}
   \textbf{Nelder-Mead}\\
-  \textbf{Toolbox Manual}\\
-  \textbf{-- Simplex Theory --}
+  \textbf{User's Manual}\\
+  \textbf{-- The Fminsearch Function --}\\
   \end{array}
   $}
 $$
 \end{center}
-\vskip4cm
 
-\normalsize
+\vskip1cm
+
+\begin{center}
+\begin{large}
+Micha\"el BAUDIN
+\end{large}
+\end{center}
+
+\vskip2cm
+
+
+\vskip1cm
+
 
 \begin{flushright}
-Version 0.2 \\
+Version 0.3 \\
 September 2009
 \end{flushright}
 
-\begin{flushright}
-Micha\"el BAUDIN
-\end{flushright}
+
 
 \clearpage
 
-%% Table of contents
-\renewcommand{\baselinestretch}{1.30}\small \normalsize
 
 \tableofcontents
 
-\renewcommand{\baselinestretch}{1.18}\small \normalsize
-
-
-\include{chapter-notations}
-\include{section-simplex}
-
+\include{fminsearch}
 
 \clearpage
-
-%% Appendix
-\appendix
 
 %% Bibliography
 
@@ -90,3 +83,4 @@ Micha\"el BAUDIN
 \printindex
 
 \end{document}
+
