--- a/scilab_doc/neldermead/neldermead-neldermead-so.tex
+++ b/scilab_doc/neldermead/neldermead-neldermead-so.tex
@@ -42,7 +42,8 @@
 $$\fbox{$
   \begin{array}{c}
   \textbf{Nelder-Mead}\\
-  \textbf{User's Manual}
+  \textbf{User's Manual}\\
+  \textbf{-- The Nelder-Mead Method --}\\
   \end{array}
   $}
 $$
@@ -58,23 +59,6 @@ Micha\"el BAUDIN
 
 \vskip2cm
 
-\textbf{Abstract}
-
-In this document, we present the Nelder-Mead component provided in Scilab.
-The introduction gives a brief overview of the optimization features of the 
-component and present an introductory example. Then we present some theory 
-associated with the simplex, a geometric concept which is central in
-the Nelder-Mead algorithm. We present several method to compute an
-initial simplex. Then we present Spendley's et al. fixed shape unconstrained 
-optimization algorithm. Several numerical experiments are provided, which 
-shows how this algorithm performs on well-scaled and badly scaled quadratics. 
-In the final section, we present the Nelder-Mead variable shape 
-unconstrained optimization algorithm. Several numerical experiments are presented,
-where some of these are counter examples, that is cases where the algorithms 
-fails to converge on a stationnary point. In the appendix of this document,
-the interested reader will find a bibliography of simplex-based algorithms,
-along with an analysis of the various implementations which are available 
-in several programming languages.
 
 \vskip1cm
 
@@ -96,23 +80,13 @@ September 2009
 \renewcommand{\baselinestretch}{1.18}\small \normalsize
 
 \include{chapter-notations}
-\include{introduction}
-\include{section-simplex}
-\include{method-spendley}
 \include{method-neldermead}
-\include{fminsearch}
-\include{conclusion}
-\include{acknowledgments}
 
 \clearpage
 
-%% Appendix
-\appendix
-
-\include{nmbibliography}
-\include{implementations}
 
 %% Bibliography
+
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliographystyle{plain}
 \bibliography{neldermead}
@@ -121,4 +95,3 @@ September 2009
 \printindex
 
 \end{document}
-
