--- a/scilab_doc/neldermead/neldermead.bib
+++ b/scilab_doc/neldermead/neldermead.bib
@@ -491,3 +491,21 @@ PAGES  = {2928}
     pages = {1422--1428}
 }
 
+@MISC{Brent73algorithmsfor,
+    author = {Richard P. Brent},
+    title = {Algorithms for Minimization without Derivatives},
+    year = {1973}
+}
+
+@book{Gill81MurrayWright,
+	address = {London},
+	author = {Gill, P. E.  and Murray, W.  and Wright, M. H. },
+	citeulike-article-id = {1055426},
+	keywords = {bibtex-import},
+	posted-at = {2007-01-20 09:02:15},
+	priority = {2},
+	publisher = {Academic Press},
+	title = {Practical optimization},
+	year = {1981}
+}
+
